--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@ rel="stylesheet">
       <div *ngIf="accountApi.isAdmin()" class="btn">
         <button class="qaButton" routerLink="layout/question">Questions</button>
         <button class="qaButton" routerLink="layout/interview">Interview</button>
+        <button class="qaButton" routerLink="layout/interview-results">Results</button>
         <button class="qaButton" routerLink="layout/account">Accounts</button>
       </div>
 
