--- a/src/app/layout/account/account-delete/account-delete.component.html
+++ b/src/app/layout/account/account-delete/account-delete.component.html
@@ -8,7 +8,7 @@
 <span>Are you sure you want to delete this Account?</span>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-info" (click)="deleteAccount()">Sim</button>
-    <button type="button" class="btn btn-outline-danger" (click)="bsModalRef.hide()">Não</button>
+    <button type="button" class="btn btn-outline-info" (click)="deleteAccount()">Yes</button>
+    <button type="button" class="btn btn-outline-danger" (click)="bsModalRef.hide()">No</button>
 
 </div>
