--- a/src/app/layout/interview/interview.component.scss
+++ b/src/app/layout/interview/interview.component.scss
@@ -54,7 +54,7 @@ table tr:first-child th:first-child {
     color: white;
 }
 
-.pdfButton {
+.loadButton {
   margin-top: 20px;
   border-radius: 60px;
   border: 0px;
@@ -67,11 +67,11 @@ table tr:first-child th:first-child {
   padding-right: 30px;
   outline: none;
 }
-.pdfButton::selection{
+.loadButton::selection{
   background-color: transparent;
 }
 
-.pdfButton span {
+.loadButton span {
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -79,12 +79,12 @@ table tr:first-child th:first-child {
   
 }
 
-.pdfButton:hover {
+.loadButton:hover {
   background-color: rgb(0, 0, 120);
   color: rgb(0, 180, 177);
 }
 
-.pdfButton span:after {
+.loadButton span:after {
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -93,11 +93,11 @@ table tr:first-child th:first-child {
   transition: 0.5s;
 }
 
-.pdfButton:hover span {
+.loadButton:hover span {
   padding-right: 25px;
 }
 
-.pdfButton:hover span:after {
+.loadButton:hover span:after {
   opacity: 1;
   right: 0;
 }
