--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -4,12 +4,10 @@
 
         <!-- A sidebar -->
         <ng-sidebar [(opened)]="_opened" position="left" [mode]="'push'">
-               
                 <br>
                 <h3>Categories</h3>
                 <br>
                 <div>
-
                 <button class="addCategory container" (click)="addCategory()">Add Category 
                         <i class="addCategoryIcon material-icons">add_circle</i>
                 </button>
@@ -29,7 +27,7 @@
                                         <option value="" selected>Any {{attribute.category}}</option>
                                         <option [value]="filteredValue" *ngFor="let filteredValue of filteredValues[i]">
                                                 {{filteredValue}}
-                                        </option>s
+                                        </option>
                                 </select>
                         </div>
                 </div>
