--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -6,7 +6,7 @@
                 </button> -->
         </h2>
 <div>
-        <button class="userButton container" (click)="openCreateModal()">Add New User
+        <button class="userButton" (click)="openCreateModal()">Add New User
                 <i class="addUserIcon material-icons">add_circle</i>
         </button>
 </div>
