--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -75,15 +75,15 @@ table tr:first-child th:first-child {
 .userButton{
     border-radius: 60px;
     border: 0px;
-    background-color: transparent;
+    background-color:transparent;
     color: rgb(0, 255, 251);
     font-size: 1rem;
     font-weight: bold;
-    padding: 10px;
-    padding-right: 30px;
     outline: none;
     justify-content: right;
-    padding-left: 84%;
+    padding-left: 2%;
+    padding-right:4%;
+    margin-left: 84%;
 
 } 
 
@@ -125,6 +125,6 @@ table tr:first-child th:first-child {
     .addUserIcon{
         font-size: 1rem;
         position: absolute;
-        padding-left: 8px;
-        padding-top: 4px;
+        margin-left: 4%;
+        margin-top: -20px;
     }
