--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -25,5 +25,5 @@
         </select>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-info" (click)="createInterview()">Load</button>
+    <button type="button" class="loadIntButton" (click)="createInterview()">Load</button>
 </div>
