--- a/src/app/layout/question/generate-interview/generate-interview.component.scss
+++ b/src/app/layout/question/generate-interview/generate-interview.component.scss
@@ -15,3 +15,52 @@
     }
     
 }
+
+
+
+.generateIntButton{
+    border-radius: 60px;
+    border: 0px;
+    background-color: rgb(2, 238, 234);
+    color: rgb(0, 0, 120);
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;  
+}
+
+.generateIntButton::selection{
+    background-color: transparent;
+}
+
+.generateIntButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;    
+}
+  
+.generateIntButton:hover {
+    background-color: rgb(0, 0, 120);
+    color: rgb(0, 255, 251);
+}
+
+.generateIntButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.generateIntButton:hover span {
+    padding-right: 25px;
+}
+
+.generateIntButton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
