--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -11,11 +11,13 @@ h2{
 
 }
 
+
 #question {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: separate;
     border-spacing: 0px;
     width: 100%;
+    text-align: justify;
     
 }
 
@@ -71,15 +73,15 @@ table tr:first-child th:first-child {
 .QuestButton{
     border-radius: 60px;
     border: 0px;
-    background-color: transparent;
+    background-color:transparent;
     color: rgb(0, 255, 251);
     font-size: 1rem;
     font-weight: bold;
     padding: 10px;
-    padding-right: 30px;
     outline: none;
     justify-content: right;
-    padding-left: 80%;
+    padding-left: 0%;
+    margin-left: 86%;
 
 } 
 
@@ -121,18 +123,10 @@ table tr:first-child th:first-child {
     .addQuestIcon{
         font-size: 1rem;
         position: absolute;
-        padding-left: 8px;
-        padding-top: 5px;
+        margin-top: -20px;
+        margin-left: 57px;
     }
 
-    
-
-
-
-    /*background-image: linear-gradient(to right, rgb(0, 255, 251) , rgb(13, 30, 207));
-    border-radius: 60px;
-    border: 0px;
-    size: 5px;*/
    
 
 // add category complex
@@ -400,3 +394,104 @@ table tr:first-child th:first-child {
     margin-left: -10px;
     margin-top: -14px;
 }
+
+// Butões de Editar e Eliminar na tabela das questions
+
+
+    .editButtonQuestion {
+        margin-left: 35%;
+        border-radius:100%;
+        border: none;
+        background-color:transparent;
+        outline: none;
+        font-style: normal;
+      }
+    
+      .editButtonQuestion {
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 25px; 
+        display: inline-block;
+        line-height: 1;
+        text-transform: none;
+        letter-spacing: normal;
+        word-wrap: normal;
+        white-space: nowrap;
+        direction: ltr;
+        color:rgb(0, 0, 22);
+        align-content: center;
+        vertical-align: middle;
+      
+      
+        /* Support for all WebKit browsers. */
+        -webkit-font-smoothing: antialiased;
+        /* Support for Safari and Chrome. */
+        text-rendering: optimizeLegibility;
+      
+        /* Support for Firefox. */
+        -moz-osx-font-smoothing: grayscale;
+      
+        /* Support for IE. */
+        font-feature-settings: 'liga';
+      
+      }
+      
+      .editButtonQuestion:hover{  
+        color: rgb(0, 180, 177);
+      }
+      .editButtonQuestion::selection{
+        background-color: transparent;
+      
+      }
+
+
+
+
+
+
+.deleteButtonQuestion {
+    border-radius:100%;
+    border: none;
+    background-color:transparent;
+    outline: none;
+    font-style: normal;
+  }
+
+.deleteButtonQuestion {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 25px; 
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+    color:rgb(0, 0, 22);
+    align-content: center;
+    vertical-align: middle;
+  
+  
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+  
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+  
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+  
+  }
+  
+  .deleteButtonQuestion:hover{  
+    color: rgb(219, 0, 0);
+  }
+  .deleteButtonQuestion::selection{
+    background-color: transparent;
+  
+  }
