validaçoes. em falta:Generate Interview- Interview Name & Interview - Load Interview

--- a/src/app/layout/question/attribute-new/attribute-new.component.scss
+++ b/src/app/layout/question/attribute-new/attribute-new.component.scss
@@ -22,7 +22,7 @@
     transition: 0.5s;    
 }
   
-.createCategoryButton:hover {
+.createCategoryButton:hover:enabled {
     background-color: rgb(0, 0, 120);
     color: rgb(0, 255, 251);
 }
