--- a/src/app/layout/question/question-new/question-new.component.scss
+++ b/src/app/layout/question/question-new/question-new.component.scss
@@ -27,7 +27,7 @@
     transition: 0.5s;    
 }
   
-.createButton:hover {
+.createButton:hover:enabled {
     background-color: rgb(0, 0, 120);
     color: rgb(0, 255, 251);
 }
