--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -44,7 +44,7 @@
 
 <!-- modal -->
 <div class="modal-header">
-  <h4 class="modal-title pull-left">Create new account</h4>
+  <h4 class="font-weight-bold modal-title pull-left">Create new account</h4>
   <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
       <span aria-hidden="true">&times;</span>
   </button>
