--- a/src/app/layout/interview/interview-delete/interview-delete.component.html
+++ b/src/app/layout/interview/interview-delete/interview-delete.component.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">Delete Question</h4>
+    <h4 class="font-weight-bold modal-title pull-left">Delete Question</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-<span>Are you sure you want to delete this question?</span>
+<span class="font-weight-bold">Are you sure you want to delete this question?</span>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-outline-info" (click)="deleteQuestion()">Yes</button>
