--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">Load Interview</h4>
+    <h4 class="font-weight-bold modal-title pull-left">Load Interview</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <label for="form-row">Candidate Name:</label>
+    <label for="form-row" class="font-weight-bold">Candidate Name:</label>
     <div id="form-row" class="form-row mb-1">
         <div class="col">
             <input class="form-control p-1 m-1" name="firstname" value="firstname" type="text" [(ngModel)]="firstname" placeholder="First Name" />
@@ -14,9 +14,9 @@
             <input class=" form-control p-1 m-1" name="lastname" value="lastname" type="text" [(ngModel)]="lastname" placeholder="Last Name" />
         </div>
     </div>
-    <label class="form-row mt-1" for="email">Candidate Email:</label>
+    <label class="form-row mt-1 font-weight-bold" for="email">Candidate Email:</label>
     <input id="email" type="text" class="form-control w-100 p-1 m-1" type="email" placeholder="email@address.com">
-    <label for="role">Select Interview:</label>
+    <label for="role" class="font-weight-bold">Select Interview:</label>
         <select class="form-control" [(ngModel)]="Interviews">
             <option value="Interview" selected></option>
             <option [value]="interview" *ngFor="let interview of Interviews">
