--- a/src/app/layout/question/attribute-edit/attribute-edit.component.html
+++ b/src/app/layout/question/attribute-edit/attribute-edit.component.html
@@ -1,17 +1,27 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">Edit Category</h4>
+    <h4 class="font-weight-bold modal-title pull-left">Edit Category</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
 
-    <label for="attribute" style="margin-bottom: 0px; margin-left: 4px;">Category</label>
-    <input id="attribute" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
+    <label for="attribute" class="font-weight-bold" style="margin-bottom: 0px; margin-left: 4px;">Category:</label>
+    <input id="attribute" required pattern="[A-z -]+$" #attribute="ngModel" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category" placeholder="Write Category">
+
+    <div class="text-danger" [hidden]="attribute.valid || attribute.untouched">
+      
+        <div  *ngIf="attribute.errors && attribute.errors.required">
+        Category is required
+        </div>
+        <div  *ngIf="attribute.errors && attribute.errors.pattern">
+        Category is invalid
+      </div>
+      </div>
 
     <div>
-    <label for="type">Types</label>
-    <input id="type" name="value" type="text" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;" [(ngModel)]="attributeValue.value">
+    <label for="type" class="font-weight-bold">Types:</label>
+    <input id="type" name="value" type="text" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;" [(ngModel)]="attributeValue.value" placeholder="Write Type">
     <button  (click)= "createAttributeValue()" style="margin-top: 3px; margin-bottom: 4px; background-color: cadetblue; border-radius: .25rem; color: black">
     + </button>
     </div>
@@ -26,5 +36,5 @@
     </div>
 
 <div class="modal-footer">
-    <button type="button" class="editCategoryButton" (click)="edit()">Edit</button>
+    <button type="button" [disabled]="!attribute.valid" class="editCategoryButton" (click)="edit()">Edit</button>
 </div>
