--- a/src/app/layout/question/attribute-new/attribute-new.component.html
+++ b/src/app/layout/question/attribute-new/attribute-new.component.html
@@ -1,14 +1,22 @@
 <div class="modal-header">
-    <h4 class="modal-title pull-left">New Category</h4>
+    <h4 class="font-weight-bold modal-title pull-left">New Category</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
 
-    <label for="attribute" style="margin-bottom: 0px; margin-left: 4px;">Category</label>
-    <input id="attribute" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
-
+    <label for="attribute" class="font-weight-bold" style="margin-bottom: 0px; margin-left: 4px;">Category</label>
+    <input id="attribute" required pattern="[A-z -]+$" #attribute="ngModel" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
+    <div class="text-danger" [hidden]="attribute.valid || attribute.untouched">
+      
+        <div  *ngIf="attribute.errors && attribute.errors.required">
+        Category is required
+        </div>
+        <div  *ngIf="attribute.errors && attribute.errors.pattern">
+        Category is invalid
+      </div>
+      </div>
 <div class="modal-footer">
-    <button class="createCategoryButton" (click)="create()">Create</button>
+    <button class="createCategoryButton" [disabled]="!attribute.valid" (click)="create()">Create</button>
 </div>
