--- a/src/app/layout/question/generate-interview/generate-interview.component.scss
+++ b/src/app/layout/question/generate-interview/generate-interview.component.scss
@@ -8,10 +8,12 @@
 .myCenter {
     height: 100%;
     text-align: center;
-    padding-top: 20%;
+    padding-top: 10%;
+    width: 80%;
+    padding-left: 20%;
+    text-align: justify;
     span {
         color: white;
-    
     }
     
 }
