--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -128,3 +128,100 @@ table tr:first-child th:first-child {
         margin-left: 4%;
         margin-top: -20px;
     }
+
+// botões edit e delete + icons
+
+    
+    .userButtonEdit {
+        margin-left: 35%;
+        border-radius:100%;
+        border: none;
+        background-color:transparent;
+        outline: none;
+        font-style: normal;
+      }
+    
+      .userButtonEdit {
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 25px; 
+        display: inline-block;
+        line-height: 1;
+        text-transform: none;
+        letter-spacing: normal;
+        word-wrap: normal;
+        white-space: nowrap;
+        direction: ltr;
+        color:rgb(0, 0, 22);
+        align-content: center;
+        vertical-align: middle;
+      
+      
+        /* Support for all WebKit browsers. */
+        -webkit-font-smoothing: antialiased;
+        /* Support for Safari and Chrome. */
+        text-rendering: optimizeLegibility;
+      
+        /* Support for Firefox. */
+        -moz-osx-font-smoothing: grayscale;
+      
+        /* Support for IE. */
+        font-feature-settings: 'liga';
+      
+      }
+      
+      .userButtonEdit:hover{  
+        color: rgb(0, 180, 177);
+      }
+      .userButtonEdit::selection{
+        background-color: transparent;
+      
+      }
+
+      
+      .userButtonDelete {
+        border-radius:100%;
+        border: none;
+        background-color:transparent;
+        outline: none;
+        font-style: normal;
+      }
+    
+      .userButtonDelete {
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 25px; 
+        display: inline-block;
+        line-height: 1;
+        text-transform: none;
+        letter-spacing: normal;
+        word-wrap: normal;
+        white-space: nowrap;
+        direction: ltr;
+        color:rgb(0, 0, 22);
+        align-content: center;
+        vertical-align: middle;
+      
+      
+        /* Support for all WebKit browsers. */
+        -webkit-font-smoothing: antialiased;
+        /* Support for Safari and Chrome. */
+        text-rendering: optimizeLegibility;
+      
+        /* Support for Firefox. */
+        -moz-osx-font-smoothing: grayscale;
+      
+        /* Support for IE. */
+        font-feature-settings: 'liga';
+      
+      }
+      
+      .userButtonDelete:hover{  
+        color: rgb(219, 0, 0);
+      }
+      .userButtonDelete::selection{
+        background-color: transparent;
+      
+      }
