--- a/src/app/layout/interview-results/interview-results.component.html
+++ b/src/app/layout/interview-results/interview-results.component.html
@@ -3,7 +3,7 @@
         class="text-white" translate>Interview Results
     </h2>
     <ngb-accordion [closeOthers]="true">
-        <ngb-panel id="static-1" title="Simple">
+        <ngb-panel class= "interviewResBar1" id="static-1" title="Simple">
           <ng-template ngbPanelContent>
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
             aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
@@ -11,9 +11,10 @@
             craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
             occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
             labore sustainable VHS.
+
           </ng-template>
         </ngb-panel>
-        <ngb-panel id="static-2" title="Hard">
+        <ngb-panel class= "interviewResBar1" id="static-2" title="Hard">
           <ng-template ngbPanelContent>
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
             aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
