--- a/src/app/layout/question/question-delete/question-delete.component.html
+++ b/src/app/layout/question/question-delete/question-delete.component.html
@@ -8,7 +8,7 @@
 <span>Are you sure you want to delete this question?</span>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-info" (click)="deleteQuestion()">Yes</button>
-    <button type="button" class="btn btn-outline-danger" (click)="bsModalRef.hide()">No</button>
+    <button type="button" class="questionButtonYes" (click)="deleteQuestion()">Yes</button>
+    <button type="button" class="questionButtonNo" (click)="bsModalRef.hide()">No</button>
 
 </div>
