--- a/src/app/layout/interview/interview.component.html
+++ b/src/app/layout/interview/interview.component.html
@@ -28,7 +28,14 @@
                 </select>
             </td>
             <td style="width:150px">
-                <button type="button" class="btn btn-outline-danger" (click)="deleteQuestion()">X</button>
+                <button type="button" class="deleteInterview" (click)="deleteQuestion()"
+                data-toggle="tooltip" data-placement="bottom" title="Delete">
+
+                    <i class="material-icons">
+                            delete</i> 
+                            
+
+                </button>
             </td>
         </tr>
     </table>
