--- a/src/app/layout/interview/interview.component.scss
+++ b/src/app/layout/interview/interview.component.scss
@@ -101,3 +101,54 @@ table tr:first-child th:first-child {
   opacity: 1;
   right: 0;
 }
+
+
+// botão delete 
+
+
+.deleteInterview {
+  border-radius:100%;
+  border: none;
+  background-color:transparent;
+  outline: none;
+  font-style: normal;
+
+}
+
+.deleteInterview {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 25px; 
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  color:rgb(0, 0, 22);
+  align-content: center;
+  vertical-align: middle;
+
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+
+}
+
+.deleteInterview:hover{  
+  color: rgb(219, 0, 0);
+}
+.deleteInterview::selection{
+  background-color: transparent;
+
+}
