--- a/src/app/layout/question/attribute-edit/attribute-edit.component.html
+++ b/src/app/layout/question/attribute-edit/attribute-edit.component.html
@@ -27,4 +27,5 @@
 
 <div class="modal-footer">
     <button type="button" class="editCategoryButton" (click)="edit()">Edit</button>
+    <button type="button" class="editCategoryButton" (click)="delete()">Remove</button>
 </div>
