--- a/src/app/layout/interview-results/interview-results.component.html
+++ b/src/app/layout/interview-results/interview-results.component.html
@@ -10,7 +10,7 @@
             Answer: A public access specifier directs that the method be accessible both inside and outside of the class. This is true as long as the class, itself, is declared as public, or the calling class is within the same package. If the class does not specify a modifier then it is assumed to have default (package) access, and the declarations for its methods do not override this.
           </ng-template>
         </ngb-panel>
-        <!-- <ngb-panel id="static-2" title="Hard">
+        <ngb-panel id="static-2" title="Hard">
           <ng-template ngbPanelContent>
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
             aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
@@ -19,6 +19,6 @@
             occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
             labore sustainable VHS.
           </ng-template>
-        </ngb-panel> -->
+        </ngb-panel>
     </ngb-accordion>
 </section>
