--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -42,7 +42,7 @@
                                 
                                 <div>
                                         <button class="pdfButton" (click)="generateInterview()">
-                                                <span>Generate Interview</span>
+                                                <span>Generate Interview-Template</span>
                                         </button>
                                 </div>
                                 <!--  <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
