--- a/src/app/layout/interview/interview.component.html
+++ b/src/app/layout/interview/interview.component.html
@@ -1,7 +1,10 @@
 <section class="container">
     <div>
         <button class="loadButton" (click)="loadInterview()">
-            <span>Load Interview</span>
+            <span>Load Interview-Template</span>
+        </button>
+        <button class="loadButton" style="float: right;" (click)="submitInterview()">
+            <span>Submit Interview</span>
         </button>
     </div>
     <div>
