--- a/src/app/layout/question/generate-interview/generate-interview.component.scss
+++ b/src/app/layout/question/generate-interview/generate-interview.component.scss
@@ -44,7 +44,7 @@
     transition: 0.5s;    
 }
   
-.generateIntButton:hover {
+.generateIntButton:hover:enabled {
     background-color: rgb(0, 0, 120);
     color: rgb(0, 255, 251);
 }
