--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -23,7 +23,13 @@
                 {{interview.value}}
             </option>
         </select>
-</div>
+
 <div class="modal-footer">
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/_6AaJMV5c-logo_banner.svg" class="modalLogo rounded float-left">
+    </div>
+
     <button type="button" class="loadIntButton" (click)="createInterview()">Load</button>
+</div>
 </div>
