--- a/src/app/layout/question/attribute-edit/attribute-edit.component.html
+++ b/src/app/layout/question/attribute-edit/attribute-edit.component.html
@@ -23,8 +23,16 @@
             <button class="myRemove" (click)="deleteAttributeValue(attributeValue.id)"
                 style="border-radius: 1rem; border-color: cadetblue; background-color:cadetblue; font-size: 15px;">x</button>
         </label>
-    </div>
+    
 
 <div class="modal-footer">
+
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+
+
     <button type="button" class="editCategoryButton" (click)="edit()">Edit</button>
+</div>
 </div>
