--- a/src/app/layout/question/generate-interview/generate-interview.component.html
+++ b/src/app/layout/question/generate-interview/generate-interview.component.html
@@ -36,6 +36,13 @@
         </a>
     </div>
     <div class="modal-footer">
+
+        <div>
+            <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+        </div>
+
+
         <button type="button" class="generateIntButton " routerLink="layout/interview"
             (click)="createInterview()">Create Interview</button>
     </div>
+</div>
