--- a/src/app/layout/question/question-delete/question-delete.component.html
+++ b/src/app/layout/question/question-delete/question-delete.component.html
@@ -8,6 +8,13 @@
 <span>Are you sure you want to delete this question?</span>
 </div>
 <div class="modal-footer">
+
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+
+
     <button type="button" class="questionButtonYes" (click)="deleteQuestion()">Yes</button>
     <button type="button" class="questionButtonNo" (click)="bsModalRef.hide()">No</button>
 
