--- a/src/app/layout/question/question-edit/question-edit.component.html
+++ b/src/app/layout/question/question-edit/question-edit.component.html
@@ -59,5 +59,11 @@
 </div>
 
 <div class="modal-footer">
+
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+    
     <button type="button" class="editQuestionButton" (click)="editQuestion()">Edit</button>
 </div>
