--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -87,9 +87,17 @@
   <select mdbInput class="form-control w-100" [(ngModel)]="account.role">
     <option [value]="roles" *ngFor="let roles of Roles">{{roles}}</option>
   </select>
-</div>
+
 
 <div class="text-center modal-footer">
+
+
+  <div>
+    <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+</div>
+
+
   <button type="button" [disabled]="!email.valid || !name.valid" class="registerButton " (click)="register()" (click)="bsModalRef.hide()">Create</button>
   <!-- <button type="button" class="btn btn-outline-danger mt-2" (click)="back()">Cancel</button> -->
+</div>
 </div>
