--- a/src/app/layout/account/account-delete/account-delete.component.html
+++ b/src/app/layout/account/account-delete/account-delete.component.html
@@ -1,4 +1,5 @@
 <div class="modal-header">
+    
     <h4 class="modal-title pull-left">Delete Account</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
         <span aria-hidden="true">&times;</span>
@@ -6,9 +7,16 @@
 </div>
 <div class="modal-body">
 <span>Are you sure you want to delete this Account?</span>
-</div>
+
 <div class="modal-footer">
+
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+
     <button type="button" class="questionButtonYes" (click)="deleteAccount()">Yes</button>
     <button type="button" class="questionButtonNo" (click)="bsModalRef.hide()">No</button>
 
+</div>
 </div>
