--- a/src/app/layout/account/account-edit/account-edit.component.html
+++ b/src/app/layout/account/account-edit/account-edit.component.html
@@ -50,6 +50,12 @@
     </select>
   </div>
   <div class="text-center modal-footer">
+
+
+    <div>
+      <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+  </div>
+
     <button type="button" class="btn btn-outline-info mt-2" (click)="editAccount()" (click)="bsModalRef.hide()" >Edit</button>
     <!-- <button type="button" class="btn btn-outline-danger mt-2" (click)="back()">Cancel</button> -->
   </div>
