--- a/src/app/layout/interview/interview-delete/interview-delete.component.html
+++ b/src/app/layout/interview/interview-delete/interview-delete.component.html
@@ -6,9 +6,15 @@
 </div>
 <div class="modal-body">
 <span>Are you sure you want to delete this question?</span>
-</div>
+
 <div class="modal-footer">
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+
     <button type="button" class="interviewButtonYes" (click)="deleteQuestion()">Yes</button>
     <button type="button" class="interviewButtonNo" (click)="bsModalRef.hide()">No</button>
 
+</div>
 </div>
