--- a/src/app/layout/question/attribute-new/attribute-new.component.html
+++ b/src/app/layout/question/attribute-new/attribute-new.component.html
@@ -10,5 +10,12 @@
     <input id="attribute" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
 
 <div class="modal-footer">
+
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+
     <button class="createCategoryButton" (click)="create()">Create</button>
+</div>
 </div>
