Modal CSS (incompleto)

--- a/src/app/layout/account/account-edit/account-edit.component.html
+++ b/src/app/layout/account/account-edit/account-edit.component.html
@@ -48,7 +48,7 @@
     <select mdbInput class="form-control w-100" [(ngModel)]="account.role">
       <option [value]="roles" *ngFor="let roles of Roles">{{roles}}</option>
     </select>
-  </div>
+  
   <div class="text-center modal-footer">
 
 
@@ -56,7 +56,8 @@
       <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
   </div>
 
-    <button type="button" class="btn btn-outline-info mt-2" (click)="editAccount()" (click)="bsModalRef.hide()" >Edit</button>
+    <button type="button" class="editAccountButton" (click)="editAccount()" (click)="bsModalRef.hide()" >Edit</button>
     <!-- <button type="button" class="btn btn-outline-danger mt-2" (click)="back()">Cancel</button> -->
   </div>
+</div>
   
