--- a/src/app/layout/account/account-edit/account-edit.component.scss
+++ b/src/app/layout/account/account-edit/account-edit.component.scss
@@ -1,4 +1,55 @@
-.editButton {
+.editAccountButton{
+    border-radius: 60px;
+    border: 0px;
+    background-color: rgb(0, 255, 251);
+    color: rgb(0, 0, 120);
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;
+}
+    
+
+.editAccountButton::selection{
+    background-color: transparent;
+}
+
+.editAccountButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+    
+  }
+  
+.editAccountButton:hover {
+    background-color: rgb(0, 0, 120);
+    color: rgb(0, 255, 251);
+}
+
+.editAccountButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.editAccountButton:hover span {
+    padding-right: 25px;
+}
+
+.editAccountButton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+// 1º butão
+
+.editButton{
     border-radius: 60px;
     border: 0px;
     background-color: rgb(0, 180, 177);
@@ -23,7 +74,7 @@
     
   }
   
-.editButton:hover {
+  .editButton:hover {
     background-color: rgb(0, 0, 120);
     color: rgb(0, 180, 177);
 }
