--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -93,11 +93,13 @@
 
 
   <div>
-    <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" 
+    class="modalLogo rounded float-left">
 </div>
 
 
-  <button type="button" [disabled]="!email.valid || !name.valid" class="registerButton " (click)="register()" (click)="bsModalRef.hide()">Create</button>
+  <button type="button" [disabled]="!email.valid || !name.valid" class="registerButton" 
+  (click)="register()" (click)="bsModalRef.hide()">Create</button>
   <!-- <button type="button" class="btn btn-outline-danger mt-2" (click)="back()">Cancel</button> -->
 </div>
 </div>
