--- a/src/app/layout/question/question-new/question-new.component.scss
+++ b/src/app/layout/question/question-new/question-new.component.scss
@@ -55,3 +55,11 @@
     margin-right: -6px;
     margin-left: -6px;
 }
+
+
+
+.h4{
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: rgb(74, 42, 219);
+  }
+  
