--- a/src/app/layout/question/generate-interview/generate-interview.component.html
+++ b/src/app/layout/question/generate-interview/generate-interview.component.html
@@ -8,8 +8,8 @@
         <label for="form-row">Interview Name:</label>
         <div id="form-row" class="form-row mb-1">
             <div class="col">
-                <input class="form-control p-1 m-1" name="interviewModel.title" value="interviewModel.title" type="text"
-                 [(ngModel)]="interviewModel.title" placeholder="example: Front-End Junior" />
+                <input class="form-control p-1 m-1" name="interview.title" value="interview.title" type="text"
+                 [(ngModel)]="interview.title" placeholder="example: Front-End Junior" />
             </div>
         </div>
     <!-- Carousel -->
