--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -6,12 +6,12 @@
 </div>
 <div class="modal-body">
     <label for="role">Select Interview-Template:</label>
-        <select class="form-control" [(ngModel)]="Interviews">
-            <option value="Interview" selected></option>
-            <option [value]="interview" *ngFor="let interview of Interviews">
-                {{interview.value}}
-            </option>
-        </select>
+    <select class="form-control" [(ngModel)]="interviewTitles">
+        <option value="interviewTitles" selected></option>
+        <option [value]="col" *ngFor="let col of interviewTitles">
+            {{col}}
+        </option>
+    </select>
 </div>
 <div class="modal-footer">
     <button type="button" class="loadIntButton" (click)="createInterview()">Load</button>
